2008-08-13  Sergey Poznyakoff  <gray@gnu.org.ua>

	Bugfixes.
	* imap4d/copy.c, imap4d/fetch.c, imap4d/store.c: Do not report
	error on non-existing message sets (RFC 3501, section 6.4.8).
	* imap4d/testsuite/imap4d/IDEF0955.exp: Reflect this behavior.
	* imap4d/testsuite/imap4d/fetch.exp: Header names in replies 
	to BODY[HEADER.FIELDS...] are no longer quoted.

2008-08-11  Sergey Poznyakoff  <gray@gnu.org.ua>

	More bugfixes in imap4d.
	* imap4d/authenticate.c (_auth_try): Fix call to p->handler.
	* imap4d/fetch.c (fetch_send_section_part): New argument
	close_bracket. 
	Never print .PEEK, it confuses some clients (notably Thunderbird).
	I need to verify RFC, though.
	All callers updated.
	* imap4d/idle.c: Use imap4d_getline to get the reply, to avod modifying
	tok and command.
	* imap4d/imap4d.h (util_send_bytes, util_trim_nl): New prototypes.
	* imap4d/util.c (util_trim_nl): New function.
	(imap4d_getline): Use util_trim_nl.
	
	Bugfixes.
	* imap4d/fetch.c (fetch_send_section_part): Make sure the item tag
	always reflects peek status.  All callers updated.
	(fetch_io): Try to allocate as large a buffer as possible.
	Use util_send_bytes where fit.
	* imap4d/imap4d.h (imap4d_auth_handler_fp): Remove unused argument.
	* imap4d/store.c (imap4d_store0): Take into account eventual UID
	prefix. 
	* imap4d/util.c (util_send_bytes): New function.
	(util_send): Comment out transcript.
	(util_do_command): Fix coredump on invalid commands.
	(imap4d_readline): Transcript only first line of the input.
	Ensure entire literal is read.

	Fix input operations and RFC-compliance in imap4d.
	
	* imap4d/util.c (util_getword, util_getitem, util_token)
	(util_unquote): Remove.
	(imap4d_readline): Rewrite to reduce memory reallocation.  Add 
	support for non-synchronizing literals (RFC 2088).
	(imap4d_readline_ex): Remove.
	(util_do_command): Rewrite using new imap4d_readline.
	(util_parse_internal_date0): Remove.
	(imap4d_tokbuf_init, imap4d_tokbuf_destroy, imap4d_tokbuf_argc)